kubernetes/apps/headscale/headscale/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  template:
    metadata:
      labels:
        app: headscale
    spec:
      shareProcessNamespace: true
      containers:

      - name: headscale
        image: ghcr.io/juanfont/headscale:v0.29.3
        args: ["serve"]
        ports:
        - containerPort: 47239
        volumeMounts:
        - name: headscale-config
          mountPath: /etc/headscale
        - name: headscale-data
          mountPath: /var/lib/headscale

      - name: headplane
        image: ghcr.io/tale/headplane:0.6.2-beta.5
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: headscale-config
          mountPath: /etc/headscale
        - name: headplane-config
          mountPath: /etc/headplane/config.yaml
          subPath: config.yaml
        - name: headplane-oidc
          mountPath: /etc/headplane/cookie-secret
          subPath: cookie-secret
        - name: headplane-oidc
          mountPath: /etc/headplane/api-key
          subPath: api-key
        - name: headplane-oidc
          mountPath: /etc/headplane/oidc-client-secret
          subPath: client-secret

      volumes:
      - name: headscale-config
        configMap:
          name: headscale-config
      - name: headscale-data
        persistentVolumeClaim:
          claimName: headscale-data
      - name: headplane-config
        configMap:
          name: headplane-config
      - name: headplane-oidc
        secret:
          secretName: headplane-oidc
