kubernetes/apps/headscale/headscale/app/httproute-internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# Headscale control plane — accès interne (subnet-router et clients in-cluster)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale-internal
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - headscale-01.linderis.fr
  rules:
    - backendRefs:
        - name: headscale
          namespace: headscale
          port: 47239
